--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.greenrobot:eventbus:3.2.0'
     compileOnly 'org.slf4j:slf4j-api:1.7.30'
+    compileOnly 'com.github.project-polar:RESTful:-SNAPSHOT'
     compileOnly 'com.github.saltedfishclub:PolarCore:dev-SNAPSHOT'
 }
 allprojects {
